<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.wolfyscript.wolfyutilities</groupId>
    <artifactId>wolfyutilities-parent</artifactId>
    <version>1.7.1.0</version>

    <packaging>pom</packaging>

    <properties>
        <!-- Generic properties -->
        <java.version>16</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spigot.version>1.17-R0.1-SNAPSHOT</spigot.version>
        <spigot.groupId>org.spigotmc</spigot.groupId>
        <spigot.artifactId>spigot-api</spigot.artifactId>
    </properties>

    <modules>
        <module>core</module>
        <module>nmsutil-v1_14_R1</module>
        <module>nmsutil-v1_15_R1</module>
        <module>nmsutil-v1_16_R1</module>
        <module>nmsutil-v1_16_R2</module>
        <module>nmsutil-v1_16_R3</module>
        <module>nmsutil-v1_17_R1</module>
        <module>wolfyutilities</module>
    </modules>

    <repositories>
        <!--
        WolfyScript private repo
        This repository requires you to have credentials to access private plugins like Oraxen and ItemsAdder.

        You can use the public repo and then provide your local installed Oraxen and ItemsAdder jars.
        Public repo: https://maven.wolfyscript.com/repository/public/
        -->
        <repository>
            <id>wolfyscript-private</id>
            <url>https://maven.wolfyscript.com/repository/private/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--Spigot API-->
        <dependency>
            <groupId>${spigot.groupId}</groupId>
            <artifactId>${spigot.artifactId}</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>${spigot.groupId}</groupId>
            <artifactId>${spigot.artifactId}</artifactId>
            <version>${spigot.version}</version>
            <classifier>javadoc</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>${spigot.groupId}</groupId>
            <artifactId>${spigot.artifactId}</artifactId>
            <version>${spigot.version}</version>
            <classifier>sources</classifier>
            <scope>provided</scope>
        </dependency>
        <!-- - - - - -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>19.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>1.5.21</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.63.Final</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.iani.cubeside</groupId>
            <artifactId>LWC</artifactId>
            <version>5.0.16-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.2.0-SNAPSHOT</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.5-SNAPSHOT</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- PlotSquared Bukkit API-->
        <dependency>
            <groupId>com.plotsquared</groupId>
            <artifactId>PlotSquared-Core</artifactId>
            <version>5.13.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.plotsquared</groupId>
            <artifactId>PlotSquared-Bukkit</artifactId>
            <version>5.13.3</version>
            <scope>provided</scope>
        </dependency>
        <!-- Some plugins that wu implements -->
        <dependency>
            <groupId>com.gmail.nossr50.mcMMO</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.1.139-SNAPSHOT</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.lumine.xikage</groupId>
            <artifactId>MythicMobs</artifactId>
            <version>4.12.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>MythicLib</artifactId>
            <version>1.0.6</version>
            <scope>provided</scope>
        </dependency>
        <!--Dependencies from private repo! They require credentials to access!-->
        <dependency>
            <groupId>io.th0rgal</groupId>
            <artifactId>oraxen</artifactId>
            <version>1.66.2</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>dev.lone</groupId>
            <artifactId>itemsadder</artifactId>
            <version>2.2.10</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>net.Indyuce</groupId>
            <artifactId>mmoitems</artifactId>
            <version>6.5.4</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>wolfyscript-admin</id>
            <name>Releases</name>
            <url>https://maven.wolfyscript.com/repository/releases/</url>
        </repository>
        <snapshotRepository>
            <id>wolfyscript-admin</id>
            <name>Snapshot</name>
            <url>https://maven.wolfyscript.com/repository/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>